--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -106,8 +106,8 @@
     "data_name = 'SID21_20231024-0046.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
-    "#data_name = 'SID21_Seq01.cdf'"
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
+    "data_name = 'SID21_Seq05.cdf'"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "id": "dccd566c",
    "metadata": {},
    "source": [
-    "## Spec LOG"
+    "## Spec"
    ]
   },
   {
@@ -335,7 +335,7 @@
     "# Sweep_num\n",
     "n0 = 0\n",
     "n1 = np.int16(n_time0/2)\n",
-    "n2 = n_time0\n",
+    "n2 = n_time0 # - 11\n",
     "# X-range\n",
     "f_min0 = f_min;  f_max0 = f_max\n",
     "# Y-range\n",
@@ -448,7 +448,21 @@
     "    png_fname = work_dir+data_name+'_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "print(\"[First]\")\n",
+    "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Mid]\")\n",
+    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Last]\")\n",
+    "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
    ]
   },
   {
