--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2023/11/18"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2023/11/20"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "data_name = 'SID23_20231024-0034.cdf'\n",
     "\n",
     "# 202311 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name = 'SID23_Seq07.cdf'\n",
     "#data_name = 'SID23_Seq08.cdf'\n",
     "#data_name = 'SID23_Seq09.cdf'"
@@ -363,16 +363,15 @@
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax4 = fig.add_subplot(4, 1, 2);  ax5 = fig.add_subplot(4, 1, 3);  ax6 = fig.add_subplot(4, 1, 4)\n",
     "\n",
-    "ax1.plot(np.ravel(spec.EuEu[n_sweep][:][:]), '-r', linewidth=.5, label='EuEu')\n",
-    "ax1.plot(np.ravel(spec.EvEv[n_sweep][:][:]), '-g', linewidth=.5, label='EvEv')\n",
-    "ax1.plot(np.ravel(spec.EwEw[n_sweep][:][:]), '-b', linewidth=.5, label='EwEw')\n",
-    "#\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][0][:]), '-r', linewidth=.5, label='EuEu')\n",
     "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='EvEv')\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='EwEw')\n",
     "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
@@ -393,7 +392,14 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-1st.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "print(\"[First]\")\n",
+    "peak_E = np.ravel(spec.EE[n_sweep][0]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")"
    ]
   },
   {
@@ -410,22 +416,21 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-5\n",
+    "n_sweep = n_time0-3\n",
     "print(\"[mid]  SWEEP:\", n_num0, \"in total of\", n_time0)\n",
     "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax4 = fig.add_subplot(4, 1, 2);  ax5 = fig.add_subplot(4, 1, 3);  ax6 = fig.add_subplot(4, 1, 4)\n",
     "\n",
-    "ax1.plot(np.ravel(spec.EuEu[n_sweep][:][:]), '-r', linewidth=.5, label='EuEu')\n",
-    "ax1.plot(np.ravel(spec.EvEv[n_sweep][:][:]), '-g', linewidth=.5, label='EvEv')\n",
-    "ax1.plot(np.ravel(spec.EwEw[n_sweep][:][:]), '-b', linewidth=.5, label='EwEw')\n",
-    "#\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][0][:]), '-r', linewidth=.5, label='EuEu')\n",
     "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='EvEv')\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='EwEw')\n",
     "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
@@ -446,7 +451,14 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-mid.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "print(\"[Mid]\")\n",
+    "peak_E = np.ravel(spec.EE[n_sweep][0]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")"
    ]
   },
   {
@@ -467,16 +479,15 @@
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax4 = fig.add_subplot(4, 1, 2);  ax5 = fig.add_subplot(4, 1, 3);  ax6 = fig.add_subplot(4, 1, 4)\n",
     "\n",
-    "ax1.plot(np.ravel(spec.EuEu[n_sweep][:][:]), '-r', linewidth=.5, label='EuEu')\n",
-    "ax1.plot(np.ravel(spec.EvEv[n_sweep][:][:]), '-g', linewidth=.5, label='EvEv')\n",
-    "ax1.plot(np.ravel(spec.EwEw[n_sweep][:][:]), '-b', linewidth=.5, label='EwEw')\n",
-    "#\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][0][:]), '-r', linewidth=.5, label='EuEu')\n",
     "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='EvEv')\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][n_block//2][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(spec.freq, np.ravel(spec.EE[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='EwEw')\n",
     "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
@@ -497,7 +508,14 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-last.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "print(\"[Last]\")\n",
+    "peak_E = np.ravel(spec.EE[n_sweep][0]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[peak_f]), \"kHz\")"
    ]
   },
   {
@@ -551,7 +569,7 @@
     "plt.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-FT.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig2d.savefig(png_fname)"
    ]
   },
   {
@@ -591,15 +609,15 @@
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
@@ -618,7 +636,11 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_auto-1st.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "peak_E = np.ravel(auto.EE[n_sweep][0][10:]);  peak_T = np.ravel(data.time[0][0][10:])\n",
+    "peak_t = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
    ]
   },
   {
@@ -635,21 +657,21 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-5\n",
+    "n_sweep = n_time0-3\n",
     "print(\"[mid]  SWEEP:\", n_num0, \"in total of\", n_time0)\n",
     "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
@@ -667,8 +689,12 @@
     "# Plot\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_auto-last.png'\n",
-    "    fig.savefig(png_fname)"
+    "    png_fname = work_dir+data_name+'_auto-mid.png'\n",
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "peak_E = np.ravel(auto.EE[n_sweep][0][10:]);  peak_T = np.ravel(data.time[0][0][10:])\n",
+    "peak_t = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
    ]
   },
   {
@@ -689,15 +715,15 @@
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][0][:]), '-r', linewidth=.5, label='first')\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][np.int16(n_block/2)][:]), '-g', linewidth=.5, label='half')\n",
-    "ax1.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
+    "ax1.plot(data.time[0][0], np.ravel(auto.EE[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
@@ -716,7 +742,11 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_auto-last.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "peak_E = np.ravel(auto.EE[n_sweep][0][10:]);  peak_T = np.ravel(data.time[0][0][10:])\n",
+    "peak_t = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
    ]
   },
   {
@@ -764,7 +794,7 @@
     "plt.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_auto-FT.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig2d.savefig(png_fname)"
    ]
   }
  ],
