--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -77,8 +77,8 @@
    "source": [
     "# *** Mode set ***\n",
     "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 2                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
+    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** Parameter set ***\n",
@@ -108,8 +108,8 @@
     "data_name = 'SID05_20231117-1611.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
-    "#data_name = 'SID05_Seq01.cdf'"
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
+    "data_name = 'SID05_Seq05.cdf'"
    ]
   },
   {
@@ -315,7 +315,15 @@
     "    png_fname = work_dir+data_name+'_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "print(\"[First]\")\n",
+    "peak_E = np.ravel(data.EE[n0]); peak_f = np.argmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Mid]\")\n",
+    "peak_E = np.ravel(data.EE[n1]); peak_f = np.argmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Last]\")\n",
+    "peak_E = np.ravel(data.EE[n2]); peak_f = np.argmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n"
    ]
   },
   {
