--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -108,8 +108,7 @@
     "data_name = 'SID07_20231024-0034.cdf'\n",
     "\n",
     "# 202311 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID07_Seq07_org.cdf'\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name = 'SID07_Seq07.cdf'\n",
     "#data_name = 'SID07_Seq08.cdf'\n",
     "#data_name = 'SID07_Seq09.cdf'"
@@ -383,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = n_time0\n",
+    "n_sweep = n_time0 - 4\n",
     "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 4, 1);   ax2 = fig.add_subplot(4, 4, 2);   ax3 = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
@@ -482,10 +481,10 @@
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
     "\n",
     "# Plot\n",
-    "fig.show\n",
+    "fig2d.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_overall.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig2d.savefig(png_fname)"
    ]
   }
  ],
