--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "# *** Mode set ***\n",
     "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 2                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "f_mode = 1                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
@@ -108,17 +108,16 @@
     "data_name = 'SID03-3ch-comp3-20231117-1432.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID03_Seq03.cdf'\n",
-    "data_name = 'SID03_Seq04.cdf'\n",
-    "data_name = 'SID03_Seq05.cdf'\n",
-    "data_name = 'SID03_Seq10.cdf'\n",
-    "data_name = 'SID03_Seq11.cdf'\n",
-    "data_name = 'SID03_Seq12.cdf'\n",
-    "data_name = 'SID03_Seq13.cdf'\n",
-    "data_name = 'SID03_Seq14.cdf'\n",
-    "data_name = 'SID03_Seq15.cdf'\n",
-    "data_name = 'SID03_Seq17.cdf'"
+    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
+    "#data_name = 'SID03_Seq03.cdf'\n",
+    "#data_name = 'SID03_Seq04.cdf'\n",
+    "#data_name = 'SID03_Seq10.cdf'\n",
+    "#data_name = 'SID03_Seq11.cdf'\n",
+    "#data_name = 'SID03_Seq12.cdf'\n",
+    "#data_name = 'SID03_Seq13.cdf'\n",
+    "#data_name = 'SID03_Seq14.cdf'\n",
+    "#data_name = 'SID03_Seq15.cdf'\n",
+    "#data_name = 'SID03_Seq17.cdf'"
    ]
   },
   {
@@ -351,15 +350,16 @@
     "EuEu_2d = data.EuEu.transpose()\n",
     "EvEv_2d = data.EvEv.transpose()\n",
     "EwEw_2d = data.EwEw.transpose()\n",
-    "E_DoLuv_2d = data.E_DoLuv.transpose()\n",
-    "E_DoLvw_2d = data.E_DoLvw.transpose()\n",
-    "E_DoLwu_2d = data.E_DoLwu.transpose()\n",
-    "E_DoCuv_2d = data.E_DoCuv.transpose()\n",
-    "E_DoCvw_2d = data.E_DoCvw.transpose()\n",
-    "E_DoCwu_2d = data.E_DoCwu.transpose()\n",
-    "E_ANGuv_2d = data.E_ANGuv.transpose()\n",
-    "E_ANGvw_2d = data.E_ANGvw.transpose()\n",
-    "E_ANGwu_2d = data.E_ANGwu.transpose()\n",
+    "if data.complex[0] > 0:    # Matrix\n",
+    "    E_DoLuv_2d = data.E_DoLuv.transpose()\n",
+    "    E_DoLvw_2d = data.E_DoLvw.transpose()\n",
+    "    E_DoLwu_2d = data.E_DoLwu.transpose()\n",
+    "    E_DoCuv_2d = data.E_DoCuv.transpose()\n",
+    "    E_DoCvw_2d = data.E_DoCvw.transpose()\n",
+    "    E_DoCwu_2d = data.E_DoCwu.transpose()\n",
+    "    E_ANGuv_2d = data.E_ANGuv.transpose()\n",
+    "    E_ANGvw_2d = data.E_ANGvw.transpose()\n",
+    "    E_ANGwu_2d = data.E_ANGwu.transpose()\n",
     "freq_width_2d  = data.freq_width.transpose()\n",
     "if unit_mode == 1:\n",
     "    EuEu_2d = EuEu_2d / freq_width_2d / 1000\n",
@@ -434,8 +434,8 @@
     "    ax6.plot(np.ravel(data.E_ANGwu), '-b', linewidth=0.6, label='wu')\n",
     "\n",
     "ax7.plot(np.ravel(data.frequency),     '-r', linewidth=0.6, label='frequency')\n",
-    "ax7.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*10')\n",
-    "ax7.plot(np.ravel(data.freq_width*100), ':b', linewidth=1.0, label='width*10')\n",
+    "ax7.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*100')\n",
+    "ax7.plot(np.ravel(data.freq_width*100), ':b', linewidth=1.0, label='width*100')\n",
     "ax8.plot(np.ravel(data.epoch), '.')\n",
     "\n",
     "ax1.set_ylabel(power_str)\n",
@@ -491,24 +491,18 @@
    "outputs": [],
    "source": [
     "# Sweep_num\n",
-    "n0 = 0\n",
-    "n1 = np.int16(n_time0/2)\n",
-    "n2 = n_time0\n",
+    "n0 = 0;   n1 = n_time0//2;  n2 = n_time0  # 11\n",
+    "# Y-range\n",
+    "p_min0 = p_min;  p_max0 = p_max\n",
     "# X-range\n",
     "f_min0 = f_min;  f_max0 = f_max\n",
     "if f_mode == 0:\n",
     "    f_min0 = f_min;  f_max0 = 5000\n",
-    "# Y-range\n",
-    "p_min0 = p_min;  p_max0 = p_max\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
     "#\n",
-    "ax1 = fig.add_subplot(4, 1, 1)\n",
-    "ax5 = fig.add_subplot(4, 1, 2)\n",
-    "ax6 = fig.add_subplot(4, 1, 3)\n",
-    "ax7 = fig.add_subplot(4, 1, 4)\n",
-    "# ax4 = fig.add_subplot(6, 1, 5)\n",
-    "# ax3 = fig.add_subplot(6, 1, 6)\n",
+    "ax1 = fig.add_subplot(4, 1, 1);  ax5 = fig.add_subplot(4, 1, 2);  ax6 = fig.add_subplot(4, 1, 3);  ax7 = fig.add_subplot(4, 1, 4)\n",
+    "#ax4 = fig.add_subplot(6, 1, 5); ax3 = fig.add_subplot(6, 1, 6)\n",
     "\n",
     "ax1.plot(freq1, data.EuEu[n0], ':r', linewidth=1.0, label='uu init')\n",
     "ax1.plot(freq1, data.EvEv[n0], ':g', linewidth=0.8, label='vv init')\n",
@@ -577,14 +571,10 @@
     "        ax5.set_xscale('log');  ax6.set_xscale('log');  ax7.set_xscale('log')   # ax3.set_xscale('log');  ax4.set_xscale('log')\n",
     "\n",
     "# Label\n",
-    "ax1.set_ylabel(power_str)\n",
+    "ax1.set_ylabel(power_str);  ax7.set_xlabel('frequency [Hz]')\n",
     "if data.complex[0] > 0:    # Matrix\n",
-    "    ax5.set_ylabel('Deg. Linear Pol.')\n",
-    "    ax6.set_ylabel('Deg. Circular Pol.')\n",
-    "    ax7.set_ylabel('Linear Deg.')\n",
-    "    # ax4.set_ylabel('Deg. Pol.')\n",
-    "    # ax3.set_ylabel('Real & Img')\n",
-    "ax7.set_xlabel('frequency [Hz]')\n",
+    "    ax5.set_ylabel('Deg. Linear Pol.');  ax6.set_ylabel('Deg. Circular Pol.');  ax7.set_ylabel('Linear Deg.')\n",
+    "    # ax4.set_ylabel('Deg. Pol.');  ax3.set_ylabel('Real & Img')\n",
     "#\n",
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
@@ -612,7 +602,21 @@
     "    png_fname = work_dir+data_name+'_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "print(\"[First]\")\n",
+    "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Mid]\")\n",
+    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Last]\")\n",
+    "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
    ]
   },
   {
@@ -638,9 +642,7 @@
     "p_min0 = p_min;      p_max0 = p_max\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,14])\n",
-    "ax1 = fig2d.add_subplot(3, 1, 1)\n",
-    "ax2 = fig2d.add_subplot(3, 1, 2)\n",
-    "ax3 = fig2d.add_subplot(3, 1, 3)\n",
+    "ax1 = fig2d.add_subplot(3, 1, 1);  ax2 = fig2d.add_subplot(3, 1, 2);  ax3 = fig2d.add_subplot(3, 1, 3)\n",
     "\n",
     "# Y-axis\n",
     "ax1.set_ylim(f_min0, f_max0);      ax2.set_ylim(f_min0, f_max0);      ax3.set_ylim(f_min0, f_max0)\n",
@@ -656,7 +658,6 @@
     "p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "p3 = ax3.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
-    "\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
@@ -684,63 +685,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Y-range\n",
-    "f_min0 = f_min;      f_max0 = f_max\n",
-    "if f_mode == 0:\n",
-    "    f_min0 = f_min;  f_max0 = 5000\n",
-    "# Z-range\n",
-    "p_min0 = p_min;      p_max0 = p_max\n",
+    "if data.complex[0] > 0:    # Matrix\n",
+    "    # Y-range\n",
+    "    f_min0 = f_min;      f_max0 = f_max\n",
+    "    if f_mode == 0:\n",
+    "        f_min0 = f_min;  f_max0 = 5000\n",
+    "    # Z-range\n",
+    "    p_min0 = p_min;      p_max0 = p_max\n",
     "\n",
-    "fig2d = plt.figure(figsize=[12,30])\n",
-    "ax1 = fig2d.add_subplot(9, 1, 1);  ax2 = fig2d.add_subplot(9, 1, 2);  ax3 = fig2d.add_subplot(9, 1, 3)\n",
-    "ax4 = fig2d.add_subplot(9, 1, 4);  ax5 = fig2d.add_subplot(9, 1, 5);  ax6 = fig2d.add_subplot(9, 1, 6)\n",
-    "ax7 = fig2d.add_subplot(9, 1, 7);  ax8 = fig2d.add_subplot(9, 1, 8);  ax9 = fig2d.add_subplot(9, 1, 9)\n",
+    "    fig2d = plt.figure(figsize=[12,30])\n",
+    "    ax1 = fig2d.add_subplot(9, 1, 1);  ax2 = fig2d.add_subplot(9, 1, 2);  ax3 = fig2d.add_subplot(9, 1, 3)\n",
+    "    ax4 = fig2d.add_subplot(9, 1, 4);  ax5 = fig2d.add_subplot(9, 1, 5);  ax6 = fig2d.add_subplot(9, 1, 6)\n",
+    "    ax7 = fig2d.add_subplot(9, 1, 7);  ax8 = fig2d.add_subplot(9, 1, 8);  ax9 = fig2d.add_subplot(9, 1, 9)\n",
     "\n",
-    "# Y-axis\n",
-    "ax1.set_ylim(f_min0, f_max0);      ax2.set_ylim(f_min0, f_max0);      ax3.set_ylim(f_min0, f_max0)\n",
-    "ax4.set_ylim(f_min0, f_max0);      ax5.set_ylim(f_min0, f_max0);      ax6.set_ylim(f_min0, f_max0)\n",
-    "ax7.set_ylim(f_min0, f_max0);      ax8.set_ylim(f_min0, f_max0);      ax9.set_ylim(f_min0, f_max0)\n",
-    "if f_mode == 1:\n",
-    "    ax1.set_yscale('log');         ax2.set_yscale('log');             ax3.set_yscale('log')\n",
-    "    ax4.set_yscale('log');         ax5.set_yscale('log');             ax6.set_yscale('log')\n",
-    "    ax7.set_yscale('log');         ax8.set_yscale('log');             ax9.set_yscale('log')\n",
-    "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
-    "ax4.set_ylabel('Frequency [kHz]'); ax5.set_ylabel('Frequency [kHz]'); ax6.set_ylabel('Frequency [kHz]')\n",
-    "ax7.set_ylabel('Frequency [kHz]'); ax8.set_ylabel('Frequency [kHz]'); ax9.set_ylabel('Frequency [kHz]')\n",
-    "\n",
-    "# X-axis\n",
-    "ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
-    "ax4.set_title('Deg. Cir. uv');     ax5.set_title('Deg. Cir. vw');     ax6.set_title('Deg. Cir. wu')\n",
-    "ax7.set_title('Ang. uv');          ax8.set_title('Ang. vw');          ax9.set_title('Ang. wu')\n",
-    "ax9.set_xlabel(str_date)\n",
-    "\n",
-    "# Plot\n",
-    "p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "p4 = ax4.pcolormesh(Epoch_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "p5 = ax5.pcolormesh(Epoch_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "p6 = ax6.pcolormesh(Epoch_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "p7 = ax7.pcolormesh(Epoch_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "p8 = ax8.pcolormesh(Epoch_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "p9 = ax9.pcolormesh(Epoch_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "\n",
-    "plt.show()\n",
-    "if dump_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_AngT.png'\n",
+    "    # Y-axis\n",
+    "    ax1.set_ylim(f_min0, f_max0);      ax2.set_ylim(f_min0, f_max0);      ax3.set_ylim(f_min0, f_max0)\n",
+    "    ax4.set_ylim(f_min0, f_max0);      ax5.set_ylim(f_min0, f_max0);      ax6.set_ylim(f_min0, f_max0)\n",
+    "    ax7.set_ylim(f_min0, f_max0);      ax8.set_ylim(f_min0, f_max0);      ax9.set_ylim(f_min0, f_max0)\n",
     "    if f_mode == 1:\n",
-    "        png_fname = work_dir+data_name+'_AngT-log.png'\n",
-    "    fig2d.savefig(png_fname)"
+    "        ax1.set_yscale('log');         ax2.set_yscale('log');             ax3.set_yscale('log')\n",
+    "        ax4.set_yscale('log');         ax5.set_yscale('log');             ax6.set_yscale('log')\n",
+    "        ax7.set_yscale('log');         ax8.set_yscale('log');             ax9.set_yscale('log')\n",
+    "    ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
+    "    ax4.set_ylabel('Frequency [kHz]'); ax5.set_ylabel('Frequency [kHz]'); ax6.set_ylabel('Frequency [kHz]')\n",
+    "    ax7.set_ylabel('Frequency [kHz]'); ax8.set_ylabel('Frequency [kHz]'); ax9.set_ylabel('Frequency [kHz]')\n",
+    "\n",
+    "    # X-axis\n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
+    "    ax4.set_title('Deg. Cir. uv');     ax5.set_title('Deg. Cir. vw');     ax6.set_title('Deg. Cir. wu')\n",
+    "    ax7.set_title('Ang. uv');          ax8.set_title('Ang. vw');          ax9.set_title('Ang. wu')\n",
+    "    ax9.set_xlabel(str_date)\n",
+    "\n",
+    "    # Plot\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p4 = ax4.pcolormesh(Epoch_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p5 = ax5.pcolormesh(Epoch_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p6 = ax6.pcolormesh(Epoch_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p7 = ax7.pcolormesh(Epoch_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p8 = ax8.pcolormesh(Epoch_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p9 = ax9.pcolormesh(Epoch_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "\n",
+    "    pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
+    "    pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
+    "    pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "    pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\");  pp1.set_label(power_str)\n",
+    "    pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\");  pp2.set_label(power_str)\n",
+    "    pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "    pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\");  pp1.set_label(power_str)\n",
+    "    pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\");  pp2.set_label(power_str)\n",
+    "    pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "\n",
+    "    plt.show()\n",
+    "    if dump_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_AngT.png'\n",
+    "        if f_mode == 1:\n",
+    "            png_fname = work_dir+data_name+'_AngT-log.png'\n",
+    "        fig2d.savefig(png_fname)"
    ]
   },
   {
