--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "# *** Mode set ***\n",
     "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 2                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
@@ -108,13 +108,13 @@
     "data_name = 'SID04-comp1-20231117-1532.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name = 'SID04_Seq01.cdf'\n",
-    "data_name = 'SID04_Seq02.cdf'\n",
-    "data_name = 'SID04_Seq16.cdf'\n",
-    "data_name = 'SID04_Seq18.cdf'\n",
-    "data_name = 'SID04_Seq19.cdf'\n",
-    "data_name = 'SID04_Seq20.cdf'"
+    "#data_name = 'SID04_Seq02.cdf'\n",
+    "#data_name = 'SID04_Seq16.cdf'\n",
+    "#data_name = 'SID04_Seq18.cdf'\n",
+    "#data_name = 'SID04_Seq19.cdf'\n",
+    "#data_name = 'SID04_Seq20.cdf'"
    ]
   },
   {
@@ -341,7 +341,7 @@
     "# Sweep_num\n",
     "n0 = 0\n",
     "n1 = np.int16(n_time0/2)\n",
-    "n2 = n_time0\n",
+    "n2 = n_time0   # - 14\n",
     "# X-range\n",
     "f_min0 = f_min;  f_max0 = f_max\n",
     "# Y-range\n",
@@ -450,7 +450,21 @@
     "    png_fname = work_dir+data_name+'_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# Peak\n",
+    "print(\"[First]\")\n",
+    "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Mid]\")\n",
+    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(\"[Last]\")\n",
+    "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
    ]
   },
   {
