SID-2: High-f-res packet checks

--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2023/12/2"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2023/12/11"
    ]
   },
   {
@@ -93,7 +93,7 @@
     "p_raw_min = 0.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Filter make ***\n",
-    "filter_mode = 1                         # 0: read     1: make\n",
+    "filter_mode = 0                         # 0: read     1: make\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max0, p_min0 = juice_cdf.cal_factors(0, cal_mode, cal, p_raw_max, p_raw_min)\n",
@@ -117,7 +117,15 @@
     "data_name = 'SID02_20231117-1607.cdf'\n",
     "data_name = 'SID02-high_20231019-1749.cdf'\n",
     "data_name = 'SID02-high_20231020-1218.cdf'\n",
-    "data_name = 'SID02-high_20231020-1222.cdf'"
+    "data_name = 'SID02-high_20231020-1222.cdf'\n",
+    "\n",
+    "# 202312 -- TEST\n",
+    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_FS/cdf/'        # CDF data folder\n",
+    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
+    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
+    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
+    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
+    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'"
    ]
   },
   {
@@ -188,7 +196,9 @@
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid2.juice_getdata_hf_sid2(cdf, cf)\n",
+    "# data = juice_sid2.juice_getdata_hf_sid2(cdf, cf)\n",
+    "data = juice_sid2.hf_sid2_read(cdf, cf)\n",
+    "data = juice_sid2.hf_sid2_proc(data)\n",
     "\n",
     "date1 = data.epoch[0]\n",
     "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
@@ -373,7 +383,7 @@
     "# Plot\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_raw-sweep.png'\n",
+    "    png_fname = work_dir+data_name+'_raw-step.png'\n",
     "    fig.savefig(png_fname)"
    ]
   },
@@ -454,7 +464,7 @@
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_min0;  f_max = 5000\n",
-    "# f_mode = 0;   f_min = 0;  f_max = 2000;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
+    "f_mode = 0;   f_min = 5000;  f_max = 10000;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
@@ -1081,52 +1091,52 @@
     "\n",
     "ax1.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax1.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax1.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax1.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax2.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax2.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax2.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax2.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax3.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax3.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax3.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax3.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax4.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax4.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax4.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax4.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax5.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax5.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax5.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax5.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax6.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax6.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax6.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax6.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax7.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax7.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax7.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax7.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax8.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax8.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax8.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax8.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "ax9.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
     "ax9.plot(freq_1d_msk0, EE_msk0, '-b', linewidth=1, label='EE mask-nat')\n",
-    "ax9.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
+    "#ax9.plot(freq_1d_msk, EE_msk, '-r', linewidth=1, label='EE mask-art')\n",
     "\n",
     "# Mask - natural\n",
-    "ax1.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax2.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax3.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax4.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax5.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax6.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax7.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax8.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "ax9.plot(mask_list0[:,0], mask_list0[:,2]*15, '.b', label='mask-nat')\n",
-    "# Mask - artificial\n",
-    "ax1.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax2.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax3.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax4.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax5.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax6.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax7.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax8.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
-    "ax9.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "ax1.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax2.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax3.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax4.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax5.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax6.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax7.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax8.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "ax9.plot(mask_list0[:,0], mask_list0[:,2]*15, '.r', label='mask-nat')\n",
+    "## Mask - artificial\n",
+    "#ax1.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax2.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax3.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax4.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax5.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax6.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax7.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax8.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
+    "#ax9.plot(mask_list[:,0], mask_list[:,2]*10, '.r', label='mask-art')\n",
     "\n",
     "# Label\n",
     "# ax1.set_ylabel('EE');  ax2.set_ylabel('EuEu'); ax3.set_ylabel('EvEv'); ax4.set_ylabel('EwEw'); \n",
@@ -1184,8 +1194,8 @@
     "num_1d = np.arange(n_time0)\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,16])\n",
-    "ax1 = fig2d.add_subplot(4, 1, 1);  ax2 = fig2d.add_subplot(4, 1, 2)\n",
-    "ax3 = fig2d.add_subplot(4, 1, 3);  ax4 = fig2d.add_subplot(4, 1, 4)\n",
+    "ax1 = fig2d.add_subplot(3, 1, 1);  ax2 = fig2d.add_subplot(3, 1, 2);  ax4 = fig2d.add_subplot(3, 1, 3)\n",
+    "# ax3 = fig2d.add_subplot(4, 1, 3);  \n",
     "\n",
     "# Y-axis\n",
     "ax1.set_ylim(f_min, f_max); ax2.set_ylim(f_min, f_max)\n",
@@ -1194,25 +1204,25 @@
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]'); ax4.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EE original');  ax2.set_title('EE median in frequency')\n",
-    "ax3.set_title('EE mask - artiticial');  ax4.set_title('EE mask - natural')\n",
+    "ax1.set_title('EE original');  ax2.set_title('EE median in frequency');  ax4.set_title('EE mask - natural')\n",
+    "#ax3.set_title('EE mask - artiticial');  \n",
     "ax4.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
-    "print(num_1d.shape, freq_1d.shape, EE_msk_2d.shape)\n",
+    "print(num_1d.shape, freq_1d.shape)  #, EE_msk_2d.shape)\n",
     "if time_mode == 1:\n",
     "    p1 = ax1.pcolormesh(num_1d,   freq_1d, EE_2d,           norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(num_1d,   freq_1d, EE_cln_2d,       norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
-    "    p3 = ax3.pcolormesh(num_1d,   freq_1d_msk, EE_msk_2d,   norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
+    "    # p3 = ax3.pcolormesh(num_1d,   freq_1d_msk, EE_msk_2d,   norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
     "    p4 = ax4.pcolormesh(num_1d,   freq_1d_msk0, EE_msk0_2d, norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
     "else:\n",
     "    p1 = ax1.pcolormesh(num_1d,   freq_1d, EE_2d,           norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(num_1d,   freq_1d, EE_cln_2d,       norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
-    "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d_msk, EE_msk_2d,   norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
+    "    # p3 = ax3.pcolormesh(Epoch_1d, freq_1d_msk, EE_msk_2d,   norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
     "    p4 = ax4.pcolormesh(Epoch_1d, freq_1d_msk0, EE_msk0_2d, norm=colors.Normalize(vmin=p_min*10, vmax=p_max*10), cmap='jet')\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\"); pp1.set_label(power_str)\n",
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\"); pp2.set_label(power_str)\n",
-    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\"); pp3.set_label(power_str)\n",
+    "# pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\"); pp3.set_label(power_str)\n",
     "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\"); pp4.set_label(power_str)\n",
     "\n",
     "# Plot\n",
@@ -1414,13 +1424,6 @@
    "source": [
     "# SID-3 emulations"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
